--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -3,7 +3,11 @@
 name: Python script
 
 # Controls when the workflow will run
+run
 on:
+  push:
+    branches:
+    -main
 
 
   # Allows you to run this workflow manually from the Actions tab
