--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -7,6 +7,8 @@ on:
   push:
     branches:
       - main
+  pull_request:
+    types: [opened, synchronize, closed]
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
